--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
   compileOnly 'org.projectlombok:lombok'
   runtimeOnly 'mysql:mysql-connector-java'
   annotationProcessor 'org.projectlombok:lombok'
+  implementation 'org.springframework.boot:spring-boot-devtools'
+
+
+
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
