--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,13 @@ spring:
     url: jdbc:mysql://localhost:3306/test
     username: testuser
     password: tjdgus12
+
+
+mybatis:
+  type-aliases-package: com.study.mybatisboard.domain
+  configuration:
+    map-underscore-to-camel-case: true
+
+logging:
+  level:
+    com.study.mybatisboard.repository: trace
